WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55978
WebKit2: Redo is broken
https://bugs.webkit.org/show_bug.cgi?id=55978
Summary
WebKit2: Redo is broken
Jeff Miller
Reported
2011-03-08 15:49:14 PST
If you undo an edit command, you cannot redo it. This is because WebEditCommandProxy::unapply() and WebEditCommandProxy::reapply() are registering the wrong edit command when an undo or redo happens. For example, when we unapply(), we should register a Redo command, not an Undo command.
Attachments
Patch
(1.83 KB, patch)
2011-03-08 15:53 PST
,
Jeff Miller
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeff Miller
Comment 1
2011-03-08 15:53:03 PST
Created
attachment 85103
[details]
Patch
Jeff Miller
Comment 2
2011-03-08 16:18:50 PST
Committed
r80603
: <
http://trac.webkit.org/changeset/80603
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug