2011-03-08  Jeff Miller  <jeffm@apple.com>

Reviewed by Oliver Hunt.

        WebKit2: Redo is broken
        https://bugs.webkit.org/show_bug.cgi?id=55978

        WebEditCommandProxy::unapply() and WebEditCommandProxy::reapply() were registering the wrong edit command when an undo or redo happens.
        For example, when we unapply(), we should register a Redo command, not an Undo command.

        * UIProcess/WebEditCommandProxy.cpp:
        (WebKit::WebEditCommandProxy::unapply): Register a Redo command, not an Undo command.
        (WebKit::WebEditCommandProxy::reapply): Register an Undo command, not a Redo command.


Canonical link: https://commits.webkit.org/70494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80603 268f45cc-cd09-0410-ab3c-d52691b4dbfc