Source/WebKit2/UIProcess/WebEditCommandProxy.cpp
@@ -54,7 +54,7 @@ void WebEditCommandProxy::unapply()
         return;
 
     m_page->process()->send(Messages::WebPage::UnapplyEditCommand(m_commandID), m_page->pageID());
-    m_page->registerEditCommand(this, WebPageProxy::Undo);
+    m_page->registerEditCommand(this, WebPageProxy::Redo);
 }
 
 void WebEditCommandProxy::reapply()
@@ -63,7 +63,7 @@ void WebEditCommandProxy::reapply()
         return;
 
     m_page->process()->send(Messages::WebPage::ReapplyEditCommand(m_commandID), m_page->pageID());
-    m_page->registerEditCommand(this, WebPageProxy::Redo);
+    m_page->registerEditCommand(this, WebPageProxy::Undo);
 }
 
 } // namespace WebKit
